# wordpan-giggle

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
ai/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  run.py
ai/src/crews/base/: llm.py
ai/src/crews/random_phrase_crew/: crew.py  schemas.py
ai/src/crews/random_phrase_crew/config/: agents.yaml  tasks.yaml
ai/src/crews/translation_crew/: __init__.py  crew.py  schemas.py
ai/src/crews/translation_crew/config/: agents.yaml  tasks.yaml
ai/src/lib/: tracer.py
features/: word-pairs-management.md
phoenix/: .env.example
supabase/: config.toml
supabase/migrations/: 20251011191117_create_words.sql  20251012135719_create_profiles.sql  20251109174824_add_languages_to_profiles.sql  20251109174827_add_translations_to_words.sql  20251109185018_create_user_word_pairs.sql
supabase/seeds/: words.sql
web/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ErrorBoundary.tsx  app-sidebar.tsx  nav-user.tsx
web/src/contexts/: UserContext.tsx
web/src/hooks/: use-profile.ts  use-random-phrase.ts  use-translation-suggestions.ts  use-word-pairs.ts  use-words.ts
web/src/layouts/: AuthLayout.tsx  UserLayout.tsx
web/src/lib/: ai-service.ts  auth-guard.tsx  database.types.ts  supabase.ts
web/src/pages/: dashboard.tsx  login.tsx  profile.tsx  random-phrase.tsx  signup.tsx  word-pairs.tsx  words.tsx
(+2 files in other folders)
